@@ -1,3 +1,7 @@
+2012-10-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-shr.el: Load shr.el at compile time.
+
 2012-10-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-epg.el: Renamed to mime-pgp.el.
